Nov 17th HW first 3 Qs

--- a/main.tex
+++ b/main.tex
@@ -1867,8 +1867,115 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         Key consideration here is that the \textbf{loss of rights ensues \underline{directly on expiry of applicable period}}. So even though the communication was sent later, the expiry was actually on 23 \textsc{Nov} 2018 (6 months from publication of EESR) and that's when loss of rights ensued. \\
         Further, the only way of being able to file a divisional is to restore the pendency of the parent first by performing FP requirements. 
     \end{enumerate}
+        \end{enumerate}
+    
+    \end{enumerate}
+  
+  
+\section{November 17, 2025}
 
-\end{enumerate}
-\end{enumerate}
+ \begin{enumerate}[label=\textbf{Question \arabic*}]
+
+    \item % Question 1
+    H4-09 (Basic selection) \\
+    An applicant has filed a second European patent application EP2, identical to and claiming priority of an earlier European patent application EP1. The Extended European Search report of the earlier European patent application EP1 indicates that the claims are novel and inventive and a communication under Rule 71(3) EPC could be expected. EP1 has been withdrawn.
+    
+    \vspace{1em}
+    The first steps for the applicant to come to a rapid grant of \textsc{EP2} would be to indicate upon filing of \textsc{EP2} that the claims of \textsc{EP1} are taken in full for \textsc{EP2}. EPO already did the search report on this invention, so it is available to them and the search fee for \textsc{EP2} will be refunded in full. No PACE request is needed. The Examination Fee and Designation Fee should be paid ASAP. Communication under \textbf{R. 70(2) EPC} (invitation to indicate whether you wanna proceed with the application) should be \underline{\textsc{waived}} by ticking the appropriate box on \textbf{RfG}. Then after \textbf{R. 71(3) EPC} comm. for \textsc{EP2}, file the translation of claims and pay the fee for publishing and grant. 
+
+    \item % Question 2
+    H4-12 \qquad T/F question (Basic selection) \\
+    The Search Division informs the applicant in accordance with Rule 64(1) EPC that the application contains three inventions, and that with respect to the second and third invention a further search fee has to be paid for each of them if the European search report is to cover these inventions. A further search fee is only paid for the second invention. In the first communication C1 from the Examining Division, the objection of non-unity is maintained in respect of the three inventions.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item The applicant may obtain protection for invention one by limiting the application to invention one and cancelling the claims to inventions two and three accordingly. \T
+        \item The applicant may obtain protection for invention two by limiting the application to invention two and cancelling the claims to inventions one and three accordingly. \T
+        \item The applicant may obtain protection for invention three by limiting the claims of the application to invention three and cancelling the claims to inventions one and two accordingly. \F
+        \item The applicant may obtain protection for invention one and two with this single application by limiting the application to invention one and two and cancelling the claims to invention three accordingly. \F
+        \item The applicant may obtain protection for invention one by timely filing a divisional application with only the claims directed to invention one. \T
+        \item The applicant may obtain protection for invention two by timely filing a divisional application with only the claims directed to invention two. \T
+        \item The applicant may obtain protection for invention three by timely filing a divisional application with only the claims directed to invention three. \T
+    \end{enumerate}
+    
+    \item % Question 3
+    H5-06 \qquad T/F question (Basic selection) \\
+    European patent application EP1 was filed on 17 April 2021 and published on Wednesday 19 October 2022. European patent application EP2 was filed on 6 June 2022. European patent application EP3 was filed on 2 December 2022. EP1, EP2 and EP3 do not claim priority. \\
+    EP1 was withdrawn by the applicant before publication but too late to avoid publication.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item EP1 is prior art under Art. 54(2) EPC and may as such be used in assessing novelty of EP2. \F -- it's a 54(3) doc.
+        \item EP1 is prior art under Art. 54(2) EPC and may as such be used in assessing inventive step of EP2. \F
+        \item EP1 is prior art under Art. 54(3) EPC and may as such be used in assessing novelty of EP2. \F --- this is a tricky one. \textsc{EP1} is not \underline{\textbf{pending}} on its publication date; therefore it cannot be used under \textbf{Art. 54(3) EPC}! --- see also \textsc{\textbf{J5/81}} and page 85 of \textbf{\textit{Lobato}}.
+        \item EP1 is prior art under Art. 54(3) EPC and may as such be used in assessing inventive step of EP2. \F
+        \item EP1 is prior art under Art. 54(2) EPC and may as such be used in assessing novelty of EP3. \T
+        \item EP1 is prior art under Art. 54(2) EPC and may as such be used in assessing inventive step of EP3. \T
+        \item EP1 is prior art under Art. 54(3) EPC and may as such be used in assessing novelty of EP3. \F
+        \item EP1 is prior art under Art. 54(3) EPC and may as such be used in assessing inventive step of EP3. \F
+    \end{enumerate}
+
+    \item % Question 4
+    H5-09 \\
+    A European patent application has been filed on 11 January 2023 as a first filing. On 13 July 2023 the applicant files a request for early publication of his application. The EPO informs him that the application will be published on Wednesday 13 September 2023. Today, 9 August 2023, the applicant realises that he has forgotten to claim priority from an earlier national application.
+    
+    \vspace{1em}
+    What can be done?
+
+    \item % Question 5
+    H6-05 \qquad T/F question (Basic selection) \\
+    Upon filing a European patent application, the applicant also paid the examination and designation fee. Early 2022, the EPO established an Extended European Search report, which mentions one prior art document that seems to take away the novelty of claim 1 as filed. The publication of the European search report is mentioned in the EP Bulletin on 21 September 2022. Shortly thereafter, the applicant receives an invitation from the EPO inviting him, among others, to indicate whether he wishes to proceed with the application.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item If the applicant does not respond to the invitation, the application will be deemed withdrawn and the examination fee will be refunded in full.
+        \item If the applicant confirms that he wishes to proceed with the application but does not comment on the EESR nor files any amendments, the application will be deemed withdrawn and the examination fee will be refunded in full.
+        \item If the applicant files comments and amendments to address the deficiencies mentioned in the EESR, but does not explicitly confirm that he wishes to proceed with the application, the application will be deemed withdrawn and the examination fee will be refunded in full.
+        \item The applicant may, together with filing any amendments to address the deficiencies mentioned in the EESR, also file further amendments of his own volition.
+    \end{enumerate}
+
+    \item % Question 6
+    H6-07 \qquad T/F question (Advanced selection) \\
+    On 2 July 2021, an applicant filed a European patent application, claiming priority of a Czech patent application filed on 3 July 2020. The claims of the European patent application correspond to claims 3 - 16 of the Czech priority application, to account for prior art cited in the search report established by the Industrial Property Office of the Czech Republic. \\
+    Last week, the Examining Division issued an invitation to supply a copy of the search report of the Czech priority application. \\
+    Today is 24 Aug 2022.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item The applicant may request an extension of the period. The request will be granted.
+        \item The EPO will include a copy of the search report automatically, at no cost.
+        \item The application is deemed to be withdrawn if the applicant fails to respond to the invitation.
+        \item The application is deemed to be withdrawn if the applicant fails to supply copies of the documents cited in the search report of the Czech priority application.
+    \end{enumerate}
+
+ 
+    \item % Question 7
+    H6-08 - T/F question (Basic selection) \\
+    Five days after expiry of the period for payment of the examination fee, the applicant of a European patent application finds out that he failed to pay the examination fee. The failure was due to an isolated mistake in an otherwise well-functioning office.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+   
+    The applicant can most likely successfully remedy the failure to pay the examination fee
+    \begin{enumerate}[label=(\alph*)]
+        \item ... by immediately requesting further processing in respect of the term for filing the request for examination.
+        \item ... by requesting further processing in respect of the term for filing the request for examination, but the applicant needs to await a loss-of-rights communication before doing so. 
+        \item ... by immediately requesting re-establishment in respect of the term for filing the request for examination.
+        \item ... by requesting re-establishment in respect of the term for filing the request for examination, but the applicant needs to await a loss-of-rights communication before doing so.
+    \end{enumerate}
+ 
+ 
+    
+   \end{enumerate}
+
 
 \end{document}
