Nov 17th HW first 5 Qs

--- a/main.tex
+++ b/main.tex
@@ -1924,7 +1924,10 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     A European patent application has been filed on 11 January 2023 as a first filing. On 13 July 2023 the applicant files a request for early publication of his application. The EPO informs him that the application will be published on Wednesday 13 September 2023. Today, 9 August 2023, the applicant realises that he has forgotten to claim priority from an earlier national application.
     
     \vspace{1em}
-    What can be done?
+    Early publication request removes ability to add a new declaration of priority --- see \textbf{R. 52(4) EPC}. This is the case here. \\
+    Nonetheless, there might still exist two potential avenues of introducing priority for this invention: \\
+    \textbf{(i)} -- withdraw the EP app \textit{\textbf{before 5 weeks before scheduled publication}} and claim priority from the withdrawn EP app and the earlier national app; if it falls within the priority year. To withdraw and avoid publication, in practice, EPO will likely not publish it if you tell them up to 2 weeks before scheduled publication, so in this case, it may be possible that they agree since there is like 4 weeks left;\\
+    \textbf{(ii)} -- the other thing is to try to withdraw the request for early pub (perhaps under \textbf{R. 139 EPC}). Again, it's not quite before 5 weeks, but the EPO may still accept it and then you still have 16 months under \textbf{R. EPC} to make a declaration of priority. 
 
     \item % Question 5
     H6-05 \qquad T/F question (Basic selection) \\
@@ -1934,10 +1937,10 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false.
     
     \begin{enumerate}[label=(\alph*)]
-        \item If the applicant does not respond to the invitation, the application will be deemed withdrawn and the examination fee will be refunded in full.
-        \item If the applicant confirms that he wishes to proceed with the application but does not comment on the EESR nor files any amendments, the application will be deemed withdrawn and the examination fee will be refunded in full.
-        \item If the applicant files comments and amendments to address the deficiencies mentioned in the EESR, but does not explicitly confirm that he wishes to proceed with the application, the application will be deemed withdrawn and the examination fee will be refunded in full.
-        \item The applicant may, together with filing any amendments to address the deficiencies mentioned in the EESR, also file further amendments of his own volition.
+        \item If the applicant does not respond to the invitation, the application will be deemed withdrawn and the examination fee will be refunded in full. \T
+        \item If the applicant confirms that he wishes to proceed with the application but does not comment on the EESR nor files any amendments, the application will be deemed withdrawn and the examination fee will be refunded in full. \T -- through not commenting on a negative EESR, the application will be \underline{deemed to be withdrawn} under \textbf{R. 70(3) EPC}. Once it's deemed to be withdrawn, it effectively terminates and \textbf{Rfees 11(a)} provides for a \textit{full refund} of the examination fee before the substantive examination has begun. 
+        \item If the applicant files comments and amendments to address the deficiencies mentioned in the EESR, but does not explicitly confirm that he wishes to proceed with the application, the application will be deemed withdrawn and the examination fee will be refunded in full. \F -- filing a response is the same as declaring proceeding with app.
+        \item The applicant may, together with filing any amendments to address the deficiencies mentioned in the EESR, also file further amendments of his own volition. \T
     \end{enumerate}
 
     \item % Question 6
