HW Nov 17th all

--- a/main.tex
+++ b/main.tex
@@ -1953,10 +1953,11 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false.
     
     \begin{enumerate}[label=(\alph*)]
-        \item The applicant may request an extension of the period. The request will be granted.
-        \item The EPO will include a copy of the search report automatically, at no cost.
-        \item The application is deemed to be withdrawn if the applicant fails to respond to the invitation.
-        \item The application is deemed to be withdrawn if the applicant fails to supply copies of the documents cited in the search report of the Czech priority application.
+        \item The applicant may request an extension of the period. The request will be granted. \F -- \colorbox{Thistle}{Ask Zsofia about this one}.
+        \item The EPO will include a copy of the search report automatically, at no cost. \F -- generally true for \textsc{CZ}, but only from \textsc{OCT 2022}, so in this case false.
+        \item The application is deemed to be withdrawn if the applicant fails to respond to the invitation. \T --- \textbf{Art. 124(2) EPC} \& \textbf{R. 70b(2) EPC}.
+        \item The application is deemed to be withdrawn if the applicant fails to supply copies of the documents cited in the search report of the Czech priority application. \F -- the cited documents don't have to be supplied, the article just says it will be withdrawn if you \textit{fail to reply in due time}. 
+        
     \end{enumerate}
 
  
@@ -1970,10 +1971,10 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
    
     The applicant can most likely successfully remedy the failure to pay the examination fee
     \begin{enumerate}[label=(\alph*)]
-        \item ... by immediately requesting further processing in respect of the term for filing the request for examination.
-        \item ... by requesting further processing in respect of the term for filing the request for examination, but the applicant needs to await a loss-of-rights communication before doing so. 
-        \item ... by immediately requesting re-establishment in respect of the term for filing the request for examination.
-        \item ... by requesting re-establishment in respect of the term for filing the request for examination, but the applicant needs to await a loss-of-rights communication before doing so.
+        \item ... by immediately requesting further processing in respect of the term for filing the request for examination. \T
+        \item ... by requesting further processing in respect of the term for filing the request for examination, but the applicant needs to await a loss-of-rights communication before doing so. \F
+        \item ... by immediately requesting re-establishment in respect of the term for filing the request for examination. \F
+        \item ... by requesting re-establishment in respect of the term for filing the request for examination, but the applicant needs to await a loss-of-rights communication before doing so. \F
     \end{enumerate}
  
  
