HW Nov 24th first 3 Qs

--- a/main.tex
+++ b/main.tex
@@ -1953,7 +1953,7 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false.
     
     \begin{enumerate}[label=(\alph*)]
-        \item The applicant may request an extension of the period. The request will be granted. \F -- \colorbox{Thistle}{Ask Zsofia about this one}.
+        \item The applicant may request an extension of the period. The request will be granted. \F -- you can only request extensions for periods \textit{to be specified by the EPO}, i.e., \textbf{if there is an explicit time limit in the EPC, you \textit{cannot} extend it!!!}.
         \item The EPO will include a copy of the search report automatically, at no cost. \F -- generally true for \textsc{CZ}, but only from \textsc{OCT 2022}, so in this case false.
         \item The application is deemed to be withdrawn if the applicant fails to respond to the invitation. \T --- \textbf{Art. 124(2) EPC} \& \textbf{R. 70b(2) EPC}.
         \item The application is deemed to be withdrawn if the applicant fails to supply copies of the documents cited in the search report of the Czech priority application. \F -- the cited documents don't have to be supplied, the article just says it will be withdrawn if you \textit{fail to reply in due time}. 
@@ -1979,7 +1979,171 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
  
  
     
-   \end{enumerate}
+\section{November 24, 2025}
+
+\begin{enumerate}[label=\textbf{Question \arabic*}]
+
+    \item % Question 1
+    H7-02 \quad T/F question (Basic selection) \\
+    An applicant filed a European patent application with the EPO in Munich.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false. \\
+    For the purposes of \textbf{Article 123(2) EPC},
+    \begin{enumerate}[label=(\alph*)]
+        \item ... the claims are part of the application as filed, if filed on the accorded filing date of the application. \T
+        \item ... the drawings are part of the application as filed, if filed on the accorded filing date of the application. \T
+        \item ... the abstract is part of the application as filed, if filed on the accorded filing date of the application. \F
+        \item ... any document referred to in the description of the application as filed as "incorporated by reference" is in its entirety part of the application as filed, if the passage citing the referenced document is part of the description on the accorded filing date of the application. \F -- see \textbf{\textit{Lobato}} \s 617 and \textsc{GL H--IV 2.2.1}. Cross-referenced documents are \textit{prima facie} \textbf{not within the content of the app as filed}. There are 4 conditions from case law that need to be met for these to be included.
+        \item ... the priority document is part of the application as filed, if filed on the accorded filing date of the application \F.
+    \end{enumerate}
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    \begin{enumerate}[label=(\alph*), resume]
+        \item If an application is filed in a non-EPO language and a translation into an official EPO-language is filed on the accorded filing date of the application, the translation into an official EPO-language is part of the application as filed for the purposes of Article 123(2) EPC. \F -- the original language is always the original disclosure.
+        \item If an application is filed by reference to a previously filed patent application with a new set of claims filed on the accorded filing date of the application, the new set of claims is part of the application as filed for the purposes of Article 123(2) EPC. \T
+        \item If a divisional application is filed, the parent application is part of the application as filed for the purposes of Article 123(2) EPC. \F
+    \end{enumerate}
+
+    \item % Question 2
+    H7-05 \quad T/F question (Basic selection) \\
+    A European patent application relates to a multi-layer laminated panel. The description includes several examples of different layered arrangements, one of these having an outer layer of polyethylene. During substantive examination, the applicant files an amendment of own motion in which the outer layer is altered to polypropylene.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item The amendment in which the outer layer is altered to polypropylene is not allowable. \T
+        \item The amendment in which the outer layer is altered to polypropylene is not allowable, unless the applicant provides evidence that polypropylene is a commonly known alternative to polyethylene. \F
+        \item The amendment in which the outer layer is altered to polypropylene would be allowable if the amendments would only have been made during opposition, provided the amendment is occasioned by a ground for opposition. \F
+    \end{enumerate}
+
+    \vspace{1em}
+    \textit{Assume that the patent is granted with the amendment in which the outer layer is altered to polypropylene. An opposition is filed based on a lack of novelty of the arrangement with the outer layer being polypropylene.}
+    
+    \vspace{0.5em}
+    For the statement below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*), resume]
+        \item The patent proprietor may amend the patent by altering the outer layer back to polyethylene. \F --- this is the \textbf{\textit{inescapable trap}} between \textbf{Art. 123(2) EPC} and \textbf{Art. 123(3) EPC}. Amending it after grant would extend the scope of protection. 
+    \end{enumerate}
+
+    \item % Question 3
+    H7-19 - T/F question (Basic selection) \\
+    In opposition proceedings before the EPO, the patentee replaced the granted claims, which were directed to originally disclosed: "Substance A" and "Mixture S containing substance A", by amended claims directed to the "Use of substance A in mixture S to achieve technical effect E". Technical effect E is a certain originally disclosed technical effect. The use of substance A in mixture S is already known for other purposes, but achieving technical effect E appears to be novel and inventive.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \vspace{0.5em}
+    Such amendment is not allowable during opposition, as.
+    \begin{enumerate}[label=(\alph*)]
+        \item ... it violates Article 123(2) EPC. \F
+        \item ... it violates Article 123(3) EPC. \F -- ``\textit{If a patent is so amended that a claim to a product (a physical entity) is replaced by a claim to the use of this product, the degree of protection is not extended, provided that the use claim in reality defines the use of a particular physical entity to achieve an effect and does not define such a use to produce a product}'' -- \textsc{G 2/88}.
+        \item ... the EPC does not allow a change of claim category after grant. \F
+        \item ... the amended claim is not new. \F
+    \end{enumerate}
+
+    \item % Question 4
+    H7-24 \quad T/F question (Basic selection) \\
+    The Examining Division intends to grant a European patent and has dispatched the communication under Rule 71(3) EPC. Shortly after having received the communication, the applicant finds an obvious error in the description of the patent application.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item It is too late to request correction after a Rule 71(3) EPC communication has been received.
+        \item It is too late to request correction after the applicant responded to the Rule 71(3) EPC communication with his approval.
+    \end{enumerate}
+    
+    \vspace{1em}
+    \textit{The obvious error resulted from a translation error when the European patent application was prepared starting from a Korean priority document. The European patent application was filed directly in English. The Korean priority document was filed together with the application.}
+    
+    \vspace{0.5em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*), resume]
+        \item The EPO will allow the correction, because the error as well as its correction are obvious in view of the priority document.
+        \item The EPO will allow the correction, because a translation may be brought into conformity with the original text at any time.
+    \end{enumerate}
+
+    \item % Question 5
+    H8-03 - T/F question (Basic selection) \\
+    The applicant received a communication of the Examining Division, wherein the Examining Division informs the applicant of the French text in which it intends to grant. The communication provides a period of 4 months for the associated acts.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item The applicant can request extension of the period with two months, which he will get granted provided it is requested before the expiry of the original period.
+        \item If the applicant fails to pay the fee for grant and publishing, he may request further processing. Such further processing shall comprise the payment of the fee for grant and publishing as well as a further processing fee at the level of 50\% of the fee for grant and publishing.
+        \item If the applicant fails to pay the fee for grant and publishing and fails to file a translation of the claims into English and German, he may request further processing. Such further processing shall comprise the payment of the fee for grant and publishing as well as a further processing fee at the level of 50\% of the fee for grant and publishing, and a further processing fee at the flat amount specified in RFees 2(1).12 for the late filing of the translations of the claims.
+        \item If the applicant fails to file a translation of the complete application into English and fails to file a translation of the claims into English and German, he may request further processing. Such further processing shall comprise the filing of the translations, as well as the payment of the associated further processing fee.
+    \end{enumerate}
+
+    \item % Question 6
+    H8-08 - T/F question \\
+    Upon filing a European patent application contained 25 claims. Upon an invitation by the EPO, the applicant has paid 5 claims fees for claims 19-23. \\
+    During substantive examination, the applicant files an amended set comprising 20 claims. A national UK prior right is cited in the search report. The applicant files a separate set of claims with 23 claims for the UK. \\
+    The applicant receives a communication from the EPO under Rule 71(3) EPC wherein the EPO expresses its intention to grant all 20 claims together with the separate set of 23 claims for the UK. The applicant wishes to get the application granted accordingly.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item In response to the Rule 71(3) EPC communication, ...
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... ten claims fees still have to be paid.
+            \item ... eight claims fees still have to be paid.
+            \item ... five claims fees still have to be paid.
+            \item ... three claims fees still have to be paid.
+        \end{enumerate}
+        
+        \item If claims fees are only paid in respect of the claim set of 20 claims, ...
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ...the UK designation will be deemed withdrawn.
+            \item ... the applicant will be invited to pay further claims fees within 1 month from the invitation.
+            \item ... the applicant may request further processing in respect of the non-paid fees.
+            \item ... the applicant may request further processing in respect of the acts of Rule 71(3) EPC by completing the payment of the missed claims fees and payment of the further processing fee referred to in RFees 2(1).12 as "fee for FP in the event of late performance of the acts required under Rule 71(3) EPC".
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 7
+    H8-10 - T/F question (Basic selection) \\
+    An EP application was filed on 5 June 2019. In response to objections raised during examination, the applicant amended the claims from the initially filed 16 claims, for which claims fees were duly paid upon filing the EP application, to 20 claims. The Examining Division issued a Rule 71(3) EPC communication dated 7 November 2023 (communication IGRA1) wherein the Examining Division made amendments to two dependent claims of the latest text submitted by the applicant. The applicant agrees with the text, but not with the amendments made by the Examining Division. The applicant wants to proceed to grant as quick as possible, and therefore wishes to go to grant by cancelling the two dependent claims that the Examining Division had amended. The applicant considers to file a set of amended claims consisting of the 18 claims that the Examining Division did not amend. Today is 22 March 2024.
+    
+    \vspace{1em}
+    What needs to be done to get the 18 remaining claims?
+    
+    \vspace{0.5em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item The applicant can file the amended claims on or before the expiry of the time limit to respond to communication IGRA1 and wait for a second Rule 71(3) communication before filing the translations of the amended claims into the other two EPO languages and paying the fee for grant and publishing.
+        \item The applicant must file translations of the amended claims into the other two EPO languages on or before the expiry of the time limit to respond to communication IGRA1.
+        \item The applicant can, within the time limit to respond to communication IGRA1, file the amended claims, file translations of the amended claims into the other two EPO languages, pay the fee for grant and publishing, pay two claims fees, and expressly waive a further Rule 71(3) communication.
+        \item The amendments may be presented as handwritten amendments on a copy of the set of the original claims, after which the Examining Division will send a new Rule 71(3) without any further intermediate communications.
+        \item The applicant must pay two claims fees on or before the expiry of the time limit to respond to communication IGRA1.
+        \item The time limit to respond to communication IGRA1 is 7 February 2024.
+    \end{enumerate}
+
+    \vspace{1em}
+    Optional question from EPAC 2023 \\
+    On 16? November 2020, you filed a European patent application EP-A, which did not claim priority. Today, 12? October 2023, you receive a communication from the EPO entitled "Decision to grant a European patent pursuant to Article? 97(1) EPC". This communication states that the mention of the grant will be published in the European Patent Bulletin on 8 ?November 2023. You wish to validate the patent in only two contracting states to the EPC.
+    
+    \vspace{1em}
+    Which of the following statements is correct? (single choice)
+    
+    \begin{enumerate}[label=\Alph*.]
+        \item The renewal fee for the fourth year must be paid centrally to the EPO. The due date is 16 November 2023.
+        \item The renewal fee for the fourth year must be paid centrally to the EPO. The due date is 30 November 2023.
+        \item The renewal fee for the fourth year must be paid separately in each state where the patent is validated. The renewal fee for the fourth year can be validly paid without any additional fee until 8 January 2024 at the latest.
+        \item The renewal fee for the fourth year must be paid separately in each state where the patent is validated. The renewal fee for the fourth year can be validly paid without any additional fee until 16 January 2024 at the latest.
+    \end{enumerate}
+
+  \end{enumerate}
+    \end{enumerate}
 
 
 \end{document}
